--- a/Test/Test_2018314019_YangSejin.ipynb
+++ b/Test/Test_2018314019_YangSejin.ipynb
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "61b466a3",
+   "id": "94cf3387",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "8e6ec305",
+   "id": "69e60002",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
     }
    ],
    "source": [
-    "#2-1\n",
+    "#2-1  // 이전 버전\n",
     "from pykrx import stock\n",
     "\n",
     "# KOSPI 종목에 대한 2023년 5월 23일자의 DIV, BPS, PER, EPS, PBR 값을 가져옵니다.\n",
@@ -317,8 +317,6 @@
     "df = df[['DIV', 'BPS', 'PER', 'EPS', 'PBR']]  # 필요한 열만 선택합니다.\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "# StandardScaler를 사용하여 데이터를 정규화합니다.\n",
     "scaler = StandardScaler()\n",
     "df_scaled = scaler.fit_transform(df)\n",
     "\n",
@@ -347,13 +345,62 @@
     "cluster_counts = predictions.groupBy(\"prediction\").count()\n",
     "cluster_counts.show()\n",
     "\n",
-    "\n"
+    "\n",
+    "# pykrx 모듈을 사용하여 KOSPI 종목의 데이터를 가져옴\n",
+    "# sklearn.preprocessing 모듈의 StandardScaler 클래스를 사용하여 데이터를 정규화\n",
+    "#pyspark.ml.clustering 모듈의 KMeans 클래스를 사용하여 K-means 클러스터링 모델을 생성하고 학습합\n",
+    "#클러스터링 결과를 예측 클러스터링 결과는 각 데이터 포인트가 어느 클러스터에 속하는지 나타내는 숫자로 표현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7e5e11d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2-1 # 이후 버전\n",
+    "\n",
+    "from pykrx import stock\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from pyspark.ml.clustering import KMeans\n",
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "# pykrx를 사용하여 KOSPI 종목에 대한 데이터를 가져옵니다.\n",
+    "df = stock.get_market_fundamental_by_ticker(\"20230523\")\n",
+    "df = df[['DIV', 'BPS', 'PER', 'EPS', 'PBR']] \n",
+    "\n",
+    "# 데이터를 정규화합니다.\n",
+    "scaler = StandardScaler()\n",
+    "df_scaled = scaler.fit_transform(df)\n",
+    "\n",
+    "# SparkSession을 초기화합니다.\n",
+    "spark = SparkSession.builder.getOrCreate()\n",
+    "\n",
+    "# 데이터프레임을 생성합니다.\n",
+    "df_spark = spark.createDataFrame(df_scaled.tolist(), df.columns.tolist())\n",
+    "\n",
+    "# VectorAssembler를 사용하여 입력 특징 벡터를 생성합니다.\n",
+    "assembler = VectorAssembler(inputCols=df.columns.tolist(), outputCol=\"features\")\n",
+    "df_assembled = assembler.transform(df_spark)\n",
+    "\n",
+    "# K-Means 모델을 생성하고 학습합니다.\n",
+    "kmeans = KMeans(k=3, seed=1)\n",
+    "model = kmeans.fit(df_assembled)\n",
+    "\n",
+    "# 클러스터링 결과를 예측합니다.\n",
+    "predictions = model.transform(df_assembled)\n",
+    "\n",
+    "# 각 클러스터에 속하는 종목의 수를 계산합니다.\n",
+    "cluster_counts = predictions.groupBy(\"prediction\").count()\n",
+    "cluster_counts.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "f1f91643",
+   "id": "9d8a25c5",
    "metadata": {},
    "outputs": [
     {
@@ -386,13 +433,17 @@
     "scaler_inverse = scaler.inverse_transform(cluster_centers_scaled)\n",
     "print(\"\\nScaling 이전 원래 값의 중앙점:\")\n",
     "for i, center in enumerate(scaler_inverse):\n",
-    "    print(f\"Cluster {i+1}: {center}\")\n"
+    "    print(f\"Cluster {i+1}: {center}\")\n",
+    "\n",
+    "#model.clusterCenters() 메서드를 사용하여 클러스터 중앙점을 가져옴\n",
+    "#print() 함수를 사용하여 클러스터 중앙점을 출력한다.\n",
+    "# 마지막으로, scaler.inverse_transform() 메서드를 사용하여 클러스터 중앙점을 원래의 값으로 변환한다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "d48a94c6",
+   "id": "9cee9df0",
    "metadata": {},
    "outputs": [
     {
@@ -443,13 +494,22 @@
     "best_silhouette = max(silhouette_scores)\n",
     "\n",
     "print(\"최적의 K 값:\", best_k)\n",
-    "print(\"실루엣 값:\", best_silhouette)\n"
+    "print(\"실루엣 값:\", best_silhouette)\n",
+    "\n",
+    "\n",
+    "# range(2, 21)를 사용하여 K 값의 범위를 설정함. K 값은 클러스터의 개수.\n",
+    "# 다음으로, for k in k_values: 루프를 사용하여 K 값을 순회\n",
+    "# 각 K 값에 대해, K-means 클러스터링 모델을 생성하고 학습함\n",
+    "# 학습된 모델을 사용하여 클러스터링 결과를 예측함\n",
+    "# 예측된 클러스터링 결과를 사용하여 실루엣 값을 계산함\n",
+    "# 실루엣 값은 클러스터링의 품질을 나타내는 지표\n",
+    "# 마지막으로, plt.plot() 함수를 사용하여 실루엣 값을 그래프로 출력합니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf31ed8d",
+   "id": "5bc1031e",
    "metadata": {},
    "outputs": [],
    "source": []
